# muesliswap-liquidity-efficient-dex

./: LICENSE  README.md
.github/workflows/: tests.yml
concentrated-lp/offchain/: .gitignore  README.md  pyproject.toml  secret_template.py  secret_template.sh
concentrated-lp/offchain/keys/: clp_batcher.addr  clp_batcher.addr_test  clp_batcher.vkey  clp_setup.addr  clp_setup.addr_test  clp_setup.vkey
concentrated-lp/offchain/metadata/: deposit.json  match.json  redeemer_full.txt  take.json  utxo_out_v4.txt
concentrated-lp/offchain/src/: batch_lib.py  cli_lib.py  config.py  lp_lib.py  mm_lib.py  order_lib.py  swap_lib.py  util.py
concentrated-lp/offchain/src/batcher/: batching_clp.py  create_pool_clp.py  swapmaking_clp.py
concentrated-lp/offchain/src/querier/: pool_querier.py  querier.py
concentrated-lp/offchain/src/tools/: create_wallet.py  mint_license.py  submit_ref_script.py
concentrated-lp/onchain/: build-scripts.sh  concentrated-liquidity-pools.cabal
concentrated-lp/onchain/plutus/: batch_order.addr  batch_order_script.plutus  factory_minting_policy.plutus  nft_policyid  pool_script.plutus  pool_without_stake_key.addr
concentrated-lp/onchain/plutus/testnet/: lp_policyid  pool.addr
concentrated-lp/onchain/src/MuesliSwapPools/ConstantProductFactory/: Types.hs
concentrated-lp/onchain/src/MuesliSwapPools/ConstantProductLiquidity/: OnChain.hs
concentrated-lp/onchain/src/MuesliSwapPools/ConstantProductPool/: OnChain.hs  Types.hs  Utils.hs
concentrated-lp/onchain/src/MuesliSwapPools/ConstantProductPoolNFT/: OnChain.hs  Utils.hs
concentrated-lp/onchain/src/MuesliSwapPools/Types/: Coin.hs
concentrated-lp/onchain/src/MuesliSwapPools/Utils/: FastRatio.hs  OnChainUtils.hs
onchain/concentrated-lp/: cabal.project
onchain/concentrated-lp/app/: Main.hs
onchain/concentrated-lp/plutus/: batch_order.addr  batch_order_script.plutus  factory_minting_policy.plutus  factory_policyid  lp_minting_policy.plutus  (+4 more)
onchain/orderbook/: .gitignore
orderbook/: .gitignore  README.md  pyproject.toml
orderbook/keys/: beneficiary.addr  beneficiary.test_addr  beneficiary.vkey  matchmaker.addr  matchmaker.test_addr  matchmaker.vkey  owner.addr  owner.test_addr  owner.vkey  scripts.addr  scripts.test_addr  scripts.vkey
orderbook/scripts/: build.py  create_key_pair.py  submit_ref_script.py
orderbook/src/offchain/: .gitignore  distribute.py  init_stake_key.py  mint_free.py  mint_license.py  send_all.py  util.py
orderbook/src/offchain/contract_interaction/: fill_order.py  fill_order_mixed.py  fill_order_partial.py  place_orders.py  return_order.py
orderbook/src/onchain/contracts/: free_mint.py  license_check.py  orderbook.py
orderbook/src/onchain/contracts/utils/: ext_fract.py  ext_values.py
orderbook/src/onchain/utils/: __init__.py  contracts.py  from_script_context.py  keys.py  network.py
orderbook/tests/: test_fraction.py  test_interval.py
orderbook/tests/orderbook/: integration_test_full.py  integration_test_mixed.py  integration_test_partial.py  test_fraction.py
(+20 files in other folders)
