[tool.poetry]
name = "offchain-clp"
version = "0.1.0"
description = "Offchain code for concentrated LP interactions"
authors = ["MuesliSwap Team <contact@muesliswap.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9, <4"
watchdog = "^3.0.0"
cardano-python-utils = { git = "git@github.com:MuesliSwapLabs/muesliswap-cardano-python-utils.git", branch = "master" }
click = "^8.1.7"
pony = "^0.7.17"
contfrac = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
