cabal-version: 3.0
name: concentrated-liquidity-pools
version: 1.0.0

library
  hs-source-dirs: src
  exposed-modules:
    MuesliSwapPools.Types.Coin,
    MuesliSwapPools.ConstantProductPool.OnChain,
    MuesliSwapPools.ConstantProductPool.Types,
    MuesliSwapPools.ConstantProductPool.Utils,
    MuesliSwapPools.ConstantProductFactory.OnChain,
    MuesliSwapPools.ConstantProductFactory.Types,
    MuesliSwapPools.ConstantProductLiquidity.OnChain,
    MuesliSwapPools.ConstantProductPoolNFT.OnChain,
    MuesliSwapPools.ConstantProductPoolNFT.Utils,
    MuesliSwapPools.BatchOrder.OnChain,
    MuesliSwapPools.BatchOrder.Types,
    MuesliSwapPools.Utils.OnChainUtils,
    MuesliSwapPools.Utils.FastRatio,
  build-depends:
    aeson,
    base ^>=4.14.1.0,
    containers,
    cardano-api,
    data-default,
    freer-extras,
    plutus-contract,
    plutus-ledger,
    plutus-ledger-api,
    plutus-ledger-constraints,
    plutus-script-utils,
    plutus-tx-plugin,
    plutus-tx,
    text,
    hex-text,
    generics-sop,
    hashable,
    deepseq,
    prettyprinter,
    serialise,
  default-language: Haskell2010
  ghc-options:
    -Wall
    -fobject-code
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-strictness
    -fno-spec-constr
    -fno-specialise

executable concentrated-liquidity-pools
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: 
    base ^>=4.14.1.0,
    concentrated-liquidity-pools,
    cardano-api,
    optparse-applicative-fork,
    bytestring,
    serialise,
